--- a/text.css
+++ b/text.css
@@ -56,3 +56,7 @@ body {
   word-spacing: 10px; /*?Kelimler arasi mesafe*/
   line-height: 1.4; /*? satir yükseliği*/
 }
+
+.indent {
+  text-indent: 30px;
+}
