--- a/text.css
+++ b/text.css
@@ -60,3 +60,27 @@ body {
 .indent {
   text-indent: 30px;
 }
+
+.direct {
+  text-align: right;
+  direction: rtl;
+}
+
+.text-shadow {
+  text-shadow: 10px -15px 5px rgba(0, 0, 0, 0.5);
+  text-shadow: 3px 5px 5px rgba(0, 0, 0, 0.3);
+}
+
+.box-shadow {
+  background-color: beige;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 2px 5px 10px rgba(205, 5, 5, 0.3);
+
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 8px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
