--- a/practice.css
+++ b/practice.css
@@ -30,6 +30,7 @@ h1 {
   margin-bottom: 10px;
   margin-right: 10px;
   display: inline-block;
+  box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.5);
 }
 
 .top-nav a:hover {
